--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt-nodejs": "^0.0.3",
-    "body-parser": "^1.20.0",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.19.0",
     "connect-multiparty": "^2.2.0",
-    "express": "^4.18.1",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
-    "moment": "^2.29.3",
-    "mongoose": "^6.3.4"
+    "moment": "^2.29.1",
+    "mongoose": "^5.13.2",
+    "nodemailer": "^6.7.1",
+    "nodemailer-smtp-transport": "^2.7.4",
+    "socket.io": "^4.4.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.15"
   }
 }
